RxJS를 이용해 데이터 조회 시 딜레이 되는 동안 UI를 대기하도록 하는 내용 추가

--- a/heros-tour/src/app/app.component.html
+++ b/heros-tour/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1> 
-<app-heroes></app-heroes> <!-- heroes라는 이름의 컴포넌트를 템플릿에 추가 -->
+
+<!-- heroes라는 이름의 컴포넌트를 템플릿에 추가 -->
+<app-heroes></app-heroes> 
+
+<!-- messages 컴포넌트 추가 -->
+<app-messages></app-messages>
