--- a/heros-tour/src/app/app.component.html
+++ b/heros-tour/src/app/app.component.html
@@ -1,7 +1,15 @@
 <h1>{{title}}</h1> 
 
+<!-- routerLink로 호출할 URL 지정 -->
+<nav>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
 <!-- heroes라는 이름의 컴포넌트를 템플릿에 추가 -->
-<app-heroes></app-heroes> 
+<!-- <app-heroes></app-heroes>  -->
+
+<!-- router로 요청한 URL에 맞게 컴포넌트를 보여줌 -->
+<router-outlet></router-outlet>
 
 <!-- messages 컴포넌트 추가 -->
 <app-messages></app-messages>
