대시보드 추가 및 라우터 연결

--- a/heros-tour/src/app/app.component.html
+++ b/heros-tour/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <!-- routerLink로 호출할 URL 지정 -->
 <nav>
+    <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/heroes">Heroes</a>
 </nav>
 
