--- a/heros-tour/src/app/heroes/heroes.component.html
+++ b/heros-tour/src/app/heroes/heroes.component.html
@@ -3,10 +3,11 @@
     <!-- *ngFor를 이용해 반복 가능 -->
     <!-- (click)을 이용해 이벤트 바인딩 가능, *ngFor에서 사용한 변수명도 사용 가능 -->
     <!-- li를 생성할때 현재 선택된 Hero와 같으면 class에 selected가 추가된다. -->
-    <li *ngFor="let hero of heroes" 
-    [class.seleced]="hero === selectedHero"
-    (click)="onSelect(hero)" >
-        <span class="badge"> {{hero.id}}</span> {{hero.name}}
+    <!-- <li *ngFor="let hero of heroes" [class.seleced]="hero === selectedHero"  (click)="onSelect(hero)" > -->
+    <li *ngFor="let hero of heroes">
+        <a routerLink = "/detail/{{hero.id}}">
+            <span class="badge"> {{hero.id}}</span> {{hero.name}}
+        </a>
     </li>
 </ul>
 
@@ -15,4 +16,4 @@
     컴포넌트를 가져오면서 hero 라는 이름으로 selectedHero 객체를 전달함
     전달된 객체는 hero-detail.component.ts에서 @Input을 통해 바인딩된다.
  -->
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
